package DecoratorPattern;

/**
 * Created by AndrewKing on 10/22/2019.
 */
public class Circle implements Shape {

    @Override
    public void draw() {
        System.out.println("Shape: Circle");
    }
}
