package FacadePattern;

/**
 * Created by AndrewKing on 10/28/2019.
 */
public interface Shape {
    void draw();
}